--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
           python-version: 3.x
 
       - name: Install dependencies
-        run: pip install mkdocs-material 
+        run: pip install mkdocs-material mkdocs-git-revision-date-plugin
       
       - name: Deploy
         run: mkdocs gh-deploy --force
