--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,7 @@ nav:
     - 2021年:
       - blog/2021/index.md
       - 12月份: 
+        - archivebox使用: blog/2021/12/archivebox.md
         - jenkins部署: blog/2021/12/jenkins.md 
         - github action使用: blog/2021/12/github_action.md 
         - nginx使用记录: blog/2021/12/nginx_record.md
