--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout master
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up Python3.x
         uses: actions/setup-python@v2
