--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,9 +74,12 @@ extra:
 extra_css:
   - stylesheets/extra.css
   - stylesheets/vssue.css
+  - //vjs.zencdn.net/7.10.2/video-js.min.css
+  - stylesheets/video.css
 
 extra_javascript:
   - javascripts/extra.js
+  - //vjs.zencdn.net/7.10.2/video.min.js
 
 markdown_extensions:
   - abbr
