--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,8 +5,8 @@ site_author: shafish
 site_description: >-
   Just write something about Work、Technology and Life.
 
-repo_url: https://github.com/shafishcn/shafish_blog
-repo_name: shafishcn/shafish_blog
+repo_url: https://github.com/tffats/shafish_blog
+repo_name: tffats/shafish_blog
 edit_uri: edit/main/docs/
 copyright: Copyright &copy; 2018 - 2021 shafish
 
@@ -129,7 +129,7 @@ nav:
       - blog/2021/index.md
       - 12月份: 
         - archivebox使用: blog/2021/12/archivebox.md
-        - jenkins部署: blog/2021/12/jenkins.md 
+        - jenkins使用: blog/2021/12/jenkins.md 
         - github action使用: blog/2021/12/github_action.md 
         - nginx使用记录: blog/2021/12/nginx_record.md
   - 生活: life/index.md
