--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,3 +137,5 @@ nav:
   - 生活: life/index.md
   - 留言: comments.md
   - 关于: about.md
+  - Archive: http://archivebox.shafish.cn/" target="_blank
+  - Lofimusic: http://lofimusic.shafish.cn/" target="_blank
