--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -143,4 +143,4 @@ nav:
   - 关于: about.md
   - Archive: http://archivebox.shafish.cn/" target="_blank
   - Lofimusic: http://lofimusic.shafish.cn/" target="_blank
-  - Note: https://note.shafish.cn/ target="_blank
+  - Note: https://note.shafish.cn/" target="_blank
