--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,6 +86,8 @@ extra_css:
 
 extra_javascript:
   #- https://cdn.jsdelivr.net/npm/xgplayer@3.0.5/dist/index.min.js
+  - https://cdn.jsdelivr.net/npm/dot@1.1.3/doT.min.js
+  - javascripts/dot.js
   - javascripts/extra.js
   #- javascripts/d.js
   #- https://file.cdn.shafish.cn/blog/js/video.min.js
