--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,11 +52,16 @@ theme:
     - navigation.top # 一键回顶 top
     - search.suggest
     - search.highlight
+    - search.share
     #- header.autohide
     - content.code.annotate
     - header.autohide
     - toc.separate
     - content.code.copy # 代码复制按钮
+    - content.action.edit
+    - content.action.view
+    - navigation.footer
+    - announce.dismiss
 
 plugins:
   - search:
@@ -68,6 +73,27 @@ plugins:
       enable_creation_date: true
       exclude:
         - comments.md
+  - blog:
+      blog_dir: newBlog
+      blog_toc: true
+      post_date_format: long
+      post_url_date_format: yyyy/MM/dd
+      post_url_format: "{slug}"
+      post_excerpt: required
+      post_excerpt_max_authors: 1
+      post_excerpt_separator: <!-- more -->
+      post_readtime: true
+      archive: true
+      archive_date_format: MMMM yyyy
+      archive_url_date_format: yyyy/MM
+      archive_url_format: "archive/{date}"
+      categories: true
+      categories_name: 标签
+      authors: true
+      pagination: true
+      pagination_per_page: 10
+      draft: true
+      draft_on_serve: false
 
 extra:
   social:
@@ -120,8 +146,8 @@ markdown_extensions:
   - pymdownx.mark
   - pymdownx.tilde  
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg      
   - md_in_html
   - meta
   - def_list
@@ -133,6 +159,8 @@ markdown_extensions:
       custom_checkbox: true  
 
 nav:
+  - Blog:
+    - newBlog/index.md
   - 技术: blog/index.md
     #- 2022:
      # - blog/2022/index.md
