--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,18 +82,19 @@ plugins:
       post_excerpt: required
       post_excerpt_max_authors: 1
       post_excerpt_separator: <!-- more -->
-      post_readtime: true
-      archive: true
+      archive_name: shafish 的归档
+      archive_toc: true
       archive_date_format: MMMM yyyy
       archive_url_date_format: yyyy/MM
       archive_url_format: "archive/{date}"
-      categories: true
-      categories_name: 标签
-      authors: true
-      pagination: true
+      categories_name: shafish 的标签
+      categories_toc: true
+      categories_url_format: "category/{slug}"
       pagination_per_page: 10
+      pagination_format: "$link_first $link_previous ~2~ $link_next $link_last"
+      pagination_keep_content: true
       draft: true
-      draft_on_serve: false
+      draft_if_future_date: true
 
 extra:
   social:
