add rss and use shafish/mkdocs-material:1.2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -73,6 +73,10 @@ plugins:
       enable_creation_date: true
       exclude:
         - comments.md
+  - rss:
+      match_path: newBlog/posts/.* 
+      date_from_meta:
+        as_creation: date
   - blog:
       blog_dir: newBlog
       blog_toc: true
