--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -146,6 +146,7 @@ markdown_extensions:
   - pymdownx.snippets:
       auto_append:
         - english/phonetic_note.md # 英语单词注解统一放在该文件中
+        - blog/phonetic_note.md
       base_path: ["docs/"]
       #check_paths: true
   - pymdownx.superfences:
