--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ site_description: >-
 repo_url: https://github.com/tffats/shafish_blog
 repo_name: tffats/shafish_blog
 edit_uri: edit/main/docs/
-copyright: Copyright &copy; 2024 <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">粤ICP备2022032763号</a>
+copyright: Copyright &copy; 2024 <a href="https://beian.miit.gov.cn/" target="_blank" rel="noopener">粤ICP备2024268880号-1</a>
 
 theme:
   name: material
